20346
`cat inference/other/BaseClass.scala`:
```scala
package inference.other
class BaseClass[T] protected(value: T)
```

`cat inference/Derived.scala`
```scala
package inference
class Derived extends other.BaseClass("value")
```

Compile:
```scala
scalac inference/other/BaseClass.scala inference/Derived.scala 
inference/Derived.scala:3: error: constructor BaseClass in class BaseClass cannot be accessed in package inference
 Access to protected constructor BaseClass not permitted because
 enclosing package inference is not a subclass of
 class BaseClass in package other where target is defined
class Derived extends other.BaseClass("value")
                            ^
inference/Derived.scala:3: error: no arguments allowed for nullary constructor Object: ()Object
class Derived extends other.BaseClass("value")
                                      ^
two errors found
```

If classes in the same package, everything is fine. If type parameter is specified `extends other.BaseClass[String]("value")` everything is also fine.
